--- a/app/views/quest/step5.html.erb
+++ b/app/views/quest/step5.html.erb
@@ -26,5 +26,26 @@
 </p>
 
  <!--Подходящее место для формы-->
-  
+ <div class="flex items-center justify-center h-screen bg-gray-100" style=" display: flex; margin-top: 5%;">
+  <%= form_tag('/final') do -%>
+     <div class="card p-4" style="width: 400px;">
+       <div class='form-field'>
+          <%=label_tag 'major', 'Major' %>
+          <%=text_field_tag 'version[major]'%>
+       </div>
+       <div class='form-field'>
+          <%=label_tag 'minor', 'Minor' %>
+          <%=text_field_tag 'version[minor]'%>
+       </div>
+       <div class='form-field'>
+         <%=label_tag 'patch', 'Patch' %>
+         <%=text_field_tag 'version[patch]'%>
+       </div>
+
+       <div class='btn btn-secondary btn-block mb-3' style="margin-top: 3%">
+          <%= submit_tag 'Send' %>
+       </div>
+     </div>
+  <% end -%>
+</div>
 </div>
